--- a/config/database.yml
+++ b/config/database.yml
@@ -32,11 +32,9 @@ test:
   socket: /tmp/mysql.sock
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
+  encoding: unicode
   database: projeto_rails_caixa_production
   pool: 5
-  username: root
+  username: postgres
   password:
-  socket: /tmp/mysql.sock
